--- a/projects/angular-sdk/src/i18n/locales/fr.json
+++ b/projects/angular-sdk/src/i18n/locales/fr.json
@@ -2,7 +2,8 @@
   "COMMON": {
     "DATE_FORMAT": {
       "HOUR": "hh:mm a",
-      "DATE": "ddMMM"
+      "DATE": "ddMMM",
+      "HOUR_AND_DATE": "EEEE d MMMM y à H:mm z"
     },
     "BUTTON": {
       "CLOSE": "Fermer"
